# wordsolve

./: .gitignore  Cargo.toml  Makefile  build.sh  docs.txt  index.html  script.js  style.css  tests.js  wordsolve.js  wordsolve_bg.wasm  worker.js
examples/: solve.rs
pkg/: wordsolve.js  wordsolve_bg.wasm
src/: js.rs  lib.rs  main.rs
