[package]
name = "wordsolve"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.release]
debug = true
lto = true

[dependencies]
fxhash = "0.2"
float-ord = "0.3"
static_assertions = "1.1"
wasm-bindgen = "0.2"

[dev-dependencies]
clap = { version = "3.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
