[package]
name = "wordsolve"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
debug = true
#lto = true

[dependencies]
fxhash = "0.2"
float-ord = "0.3"
js-sys = "0.3"
lazy_static = "1.4"
serde = { version = "1.0", features = ["derive"] }
static_assertions = "1.1"
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }

[dev-dependencies]
clap = { version = "3.0", features = ["derive"] }
serde_json = "1.0"
